--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,6 +1,6 @@
 //Sensitivity
 	// Windows  6/11
-	// Mouse  	600 DPI
+	// Mouse    600 DPI
 sensitivity 1.7
 zoom_sensitivity_ratio_mouse .9
 
@@ -103,7 +103,7 @@ snd_stereo_speaker_pan_radial_weight "0.5
 	bind "MWHEELDOWN" "+jump"
 	bind "MWHEELUP" "+jump"
 	bindtoggle "m" "voice_enable"
-	bind "n" "noclip"
+	bind "capslock" "noclip"
 	bind "k" "kill"
 	bind "l" "say !guns"
 	bind "z" "use weapon_c4;drop"
