--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,6 +1,6 @@
 //Sensitivity
 	// Windows  6/11
-	// Mouse  	600 DPI
+	// Mouse    600 DPI
 sensitivity 1.4
 zoom_sensitivity_ratio_mouse .9
 
@@ -72,7 +72,7 @@ snd_stereo_speaker_pan_radial_weight "0.5
 	bind "9" "slot9"
 	bind "a" "+moveleft"
 	bind "b" "buymenu"
-	bind "c" "radio1"
+	bind "c" "use weapon_smokegrenade"
 	bind "d" "+moveright"
 	bind "e" "+use"
 	bind "f" "+lookatweapon"
@@ -105,22 +105,29 @@ snd_stereo_speaker_pan_radial_weight "0.5
 	bindtoggle "m" "voice_enable"
 	bind "capslock" "noclip"
 	bind "k" "kill"
+	bind "END" "disconnect"
 	bind "l" "say !guns"
 	bind "z" "use weapon_c4;drop"
-	bind "v" "say !r"
+	bind "v" "radio1"
 	bind "ALT" "+voicerecord"
 
 	// Buy Binds
-	bind "kp_ins" "buy ak47; buy m4a1; buy vesthelm; buy defuser; buy molotov; buy incgrenade; buy flashbang; buy hegrenade; buy smokegrenade;"
+	bind "kp_ins" "buy m4a1; buy ak47; buy vesthelm; buy defuser; buy flashbang; buy smokegrenade; buy hegrenade; buy molotov; buy incgrenade;"
 	bind "kp_del" "buy defuser;"
 	bind "kp_end" "buy ak47; buy m4a1;"
-	bind "kp_pgdn" "buy p250;"
-	bind "kp_slash" "buy molotov; buy incgrenade;"
-	bind "kp_multiply" "buy flashbang;"
-	bind "kp_minus" "buy smokegrenade;"
-	bind "kp_plus" "buy smokegrenade;"
-	bind "kp_enter" "buy awp;"
 	bind "kp_downarrow" "buy vesthelm;"
+	bind "kp_pgdn" "buy p250;"
+	bind "kp_leftarrow" "buy famas; buy galilar;"
+	bind "kp_5" "buy deagle;"
+	bind "kp_rightarrow" "buy tec9;"
+	bind "kp_home" "buy mp7;"
+	bind "kp_uparrow" "buy vest;"
+	bind "kp_pgup" "buy flashbang; buy smokegrenade; buy hegrenade; buy molotov; buy incgrenade;"
+	bind "kp_slash" "buy molotov; buy incgrenade;"
+	bind "kp_multiply" "buy hegrenade;"
+	bind "kp_minus" "buy smokegrenade;"
+	bind "kp_plus" "buy flashbang;"
+	bind "kp_enter" "buy awp;"
 	
 // LEAVE THIS ALONE, IT FINALIZES YOUR CONFIG
 host_writeconfig
