--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,8 +1,11 @@
+//Updated 6/29/18
+
 //Sensitivity
 	// Windows  6/11
-	// Mouse    600 DPI
-sensitivity 1.4
+	// Mouse  	600 DPI
+sensitivity 1.3
 zoom_sensitivity_ratio_mouse .9
+cl_crosshair_sniper_width 2
 
 //Crosshair
 cl_crosshairalpha "250"
@@ -48,8 +51,10 @@ snd_rear_stereo_speaker_position "90.0"
 snd_stereo_speaker_pan_exponent "1.4"
 snd_stereo_speaker_pan_radial_weight "0.5
 
-// DISPLAY TEAM INFORMATION
+// MISC COMMANDS
 +cl_show_team_equipment
+cl_autowepswitch "0"
+cl_crosshair_sniper_width 2
 
 // Key Binds
 
