--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -2,9 +2,9 @@
 
 //Sensitivity
 	// Windows  6/11
-	// Mouse  	600 DPI
+	// Mouse    600 DPI
 sensitivity 1.3
-zoom_sensitivity_ratio_mouse .9
+zoom_sensitivity_ratio_mouse .85
 cl_crosshair_sniper_width 2
 
 //Crosshair
@@ -26,7 +26,7 @@ cl_crosshair_drawoutline "1"
 // JUMPTHROW GRENADES
 alias +jumpthrow "+jump;-attack"
 alias -jumpthrow "-jump"
-bind x +jumpthrow
+bind k +jumpthrow
 
 // DISPLAY DAMAGE INFO SCRIPT
 developer 1
@@ -112,8 +112,8 @@ cl_crosshair_sniper_width 2
 	bind "k" "kill"
 	bind "END" "disconnect"
 	bind "l" "say !guns"
-	bind "z" "use weapon_c4;drop"
-	bind "v" "radio1"
+	bind "v" "use weapon_c4;drop"
+	bind "z" "radio1"
 	bind "ALT" "+voicerecord"
 
 	// Buy Binds
